--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,26 @@
+# Dependencies
 node_modules/
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Build files
+/dist
+/build
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
