--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,12 +2,17 @@ FROM node:18-alpine
 
 WORKDIR /app
 
-COPY package*.json ./
+# Copiar los archivos de dependencias
+COPY backend/package*.json ./
 
+# Instalar dependencias
 RUN npm install
 
-COPY . .
+# Copiar el resto de los archivos
+COPY backend/ .
 
+# Exponer el puerto
 EXPOSE 5000
 
+# Comando para iniciar la aplicación
 CMD ["npm", "start"] 
